# aurora-rust-gui

./: Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.rpm/: aurora-rust-gui.desktop  aurora-rust-gui.spec
include/qt5/QmfClient/: QCharsetDetector  QLogBase  QMailAccount  QMailAccountConfiguration  QMailAccountKey  QMailAccountListModel  QMailAccountSortKey  QMailActionData  QMailAddress  QMailCodec  QMailContentManagerPluginInterface  QMailCryptoFwd  QMailCryptographicServiceFactory  QMailDisconnected  QMailFolderFwd  QMailFolderKey  QMailFolderList  QMailFolderSortKey  QMailKeyArgument  QMailMessageContentDispositionFwd  QMailMessageId  QMailMessageKey  QMailMessageListModel  QMailMessageModelImplementation  QMailMessagePartContainer  QMailMessageRemovalRecordList  QMailMessageServer  QMailMessageSetContainer  QMailMessageSortKey  QMailMessageThreadedModel  QMailPluginManager  QMailServiceAction  QMailSortKeyArgument  QMailStore  QMailThreadKey  QMailThreadList  QMailTimeStamp  (+13 more)
include/sailfishapp/: sailfishapp.h
lib/: libGLESv2.so.2  libQt5DBus.so.5  libQt5Network.so.5  libcap.so.2  libdbus-1.so.3  libdconf.so.1  libffi.so.6  libgcrypt.so.11  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgpg-error.so.0  libhybris-common.so.1  libicui18n.so.63  libicuuc.so.63  liblzma.so.5  libmdeclarativecache5.so.0  libmlite5.so.0  libpcre.so.1  libpcre16.so.0  libpng16.so.16  libresolv.so.2  libselinux.so.1  libsystemd.so.0  libz.so.1
qml/: cover.qml  main.qml
src/: main.rs  qbytearray.rs  qstring.rs  qurl.rs  sailfishapp.rs
(+351 files in other folders)
